0.7.9 - currently working on
- [#4647] Cleanup: Deprecate TemplateHelper::pi_getPidList
- [#4600] Fix: Test failure tx_oelib_SalutationSwitcherTest
- [#3996] Fix: Two tests of the templatehelperchild testcase fail
- [#4591] Fix: Session::setInstance must be static
- [#4501] Cleanup: Document the different return types of the mailer factory
- [#4502] Cleanup: Document the different return types of the header proxy factory
- [#4485] Fix: Add TYPO3 maximum version to ext_emconf.php

0.7.8 - released 2012-06-22
- [#4454] Fix: Test failures concerning the images in the current Core master
- [#4448] Fix: createRestrictedImage fails with latest Core master
- [#4449] Fix: tx_oelib_Object::__destruct must not be abstract
- [#4441] Fix: The translator registry must not use forceCharset for TYPO3 >= 4.7
- [#4434] Fix: Framework::getAutoIncrement and FrameworkTest::getSortingOfRelation need to return integers
- [#4435] Fix: Database::createRecursivePageList needs to return a string even for integer $startPages and zero $recursionDepth
- [#4369] Fix: Test failure with master in tx_seminars_cli_MailNotifierTest
- [#3815] Fix: Throw more meaningful Exceptions
- [#4398] Fix: Make the exception about dead models more helpful
- [#3257] Fix: tx_oelib_Model_FrontEndUser::getGender should use "99" for "undefined"

0.7.7 - released 2012-03-04
- [#4347] Fix: Fix missing/incorrect @return and return values
- [#4295] Fix: Fix all deprecation log warnings and version-specific unit test failures when running the unit tests on the current Core master
- [#4284] Fix: Fix the translate function for TYPO3 4.6 branch and master
- [#4344] Fix: Non-static methods of the TranslatorRegistry are called statically in the unit tests
- [#4350] Fix: Fix undefined and unused variables
- [#4326] Cleanup: Remove the Zend Studio metadata from all projects
- [#4306] Fix: Only call logDeprecatedFunction if the TYPO3 version is high enough
- [#4292] Fix: Adapt all version number checks for 4.6